// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`-- represents end of options 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "foo": undefined,
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`-- represents end of options 2`] = `
{
  "args": [
    "--foo",
  ],
  "errors": [],
  "options": {
    "foo": undefined,
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`-- represents end of options 3`] = `
{
  "args": [
    "--foo",
  ],
  "errors": [
    "--foo: missing value for option",
  ],
  "options": {
    "foo": undefined,
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`basic string option 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "foo": "bar",
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`boolean options 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "awesome": true,
    "epic": false,
    "help": false,
    "isCool": true,
  },
  "spec": {
    "awesome": Impl {},
    "epic": Impl {},
    "help": Impl {},
    "isCool": Impl {},
  },
}
`;

exports[`curried 1`] = `
{
  "args": [
    "foo",
    "bar",
  ],
  "errors": [],
  "options": {
    "help": false,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`empty spec 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`help option is always present 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": true,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`help option is always present 2`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": true,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`int option 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
    "port": 8080,
  },
  "spec": {
    "help": Impl {},
    "port": Impl {},
  },
}
`;

exports[`int option 2`] = `
{
  "args": [
    "nope",
  ],
  "errors": [
    "--port: expected an integer",
  ],
  "options": {
    "help": false,
    "port": undefined,
  },
  "spec": {
    "help": Impl {},
    "port": Impl {},
  },
}
`;

exports[`mixed options and arguments 1`] = `
{
  "args": [
    "a",
    "else",
  ],
  "errors": [],
  "options": {
    "baz": true,
    "bux": "something",
    "foo": "bar",
    "help": false,
  },
  "spec": {
    "baz": Impl {},
    "bux": Impl {},
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`oneOf option 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
    "verbose": "low",
  },
  "spec": {
    "help": Impl {},
    "verbose": Impl {},
  },
}
`;

exports[`oneOf option 2`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
    "verbose": "medium",
  },
  "spec": {
    "help": Impl {},
    "verbose": Impl {},
  },
}
`;

exports[`oneOf option 3`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
    "verbose": "high",
  },
  "spec": {
    "help": Impl {},
    "verbose": Impl {},
  },
}
`;

exports[`oneOf option 4`] = `
{
  "args": [
    "what",
  ],
  "errors": [
    "--verbose: expected one of the valid values",
  ],
  "options": {
    "help": false,
    "verbose": undefined,
  },
  "spec": {
    "help": Impl {},
    "verbose": Impl {},
  },
}
`;

exports[`option with long alias 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "foo": "name",
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`option with negative int argument 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "foo": -1,
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`option with short alias 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "foo": "name",
    "help": false,
  },
  "spec": {
    "foo": Impl {},
    "help": Impl {},
  },
}
`;

exports[`positional arguments are forwarded 1`] = `
{
  "args": [
    "a",
    "b",
    "c",
  ],
  "errors": [],
  "options": {
    "help": false,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`short canonical option is rendered properly for error 1`] = `
{
  "args": [],
  "errors": [
    "--foo (alias of -o): missing value for option",
  ],
  "options": {
    "help": false,
    "o": undefined,
  },
  "spec": {
    "help": Impl {},
    "o": Impl {},
  },
}
`;

exports[`skips the first two argv if it is process.argv 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "help": false,
  },
  "spec": {
    "help": Impl {},
  },
}
`;

exports[`string option requires argument 1`] = `
{
  "args": [],
  "errors": [
    "--wrong: missing value for option",
  ],
  "options": {
    "help": false,
    "wrong": undefined,
  },
  "spec": {
    "help": Impl {},
    "wrong": Impl {},
  },
}
`;

exports[`string option requires argument 2`] = `
{
  "args": [],
  "errors": [
    "--wrong: missing value for option",
    "--wrong: missing value for option",
  ],
  "options": {
    "help": false,
    "wrong": undefined,
  },
  "spec": {
    "help": Impl {},
    "wrong": Impl {},
  },
}
`;

exports[`string option with default 1`] = `
{
  "args": [],
  "errors": [],
  "options": {
    "food": "bread",
    "help": false,
  },
  "spec": {
    "food": Impl {},
    "help": Impl {},
  },
}
`;

exports[`undefined options are errors 1`] = `
{
  "args": [],
  "errors": [
    "--what: unknown option",
    "--the: unknown option",
    "-f: unknown option",
  ],
  "options": {
    "help": false,
  },
  "spec": {
    "help": Impl {},
  },
}
`;
